# unity-qjs

./: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  README.md  quickjs.sln
Assets/qjs/Behaviours/: BaseBehaviour.cs  EditorBaseBehaviour.cs
Assets/qjs/Configure/: Configure.cs  DefaultConfigure.cs
Assets/qjs/Core/: Container.cs  QuickBehaviour.cs  QuickJS.cs  SimpleJSON.cs  Types.cs  Utils.cs
Assets/qjs/Demos/: BaseBehaviour.cs
Assets/qjs/Demos/HelloWorld/: HelloWorld.cs  HelloWorld.unity
Assets/qjs/Demos/MultiThread/: MtConfigure.cs  MtConfigure_Gen.cs  MultiThreadDemo.unity  multi_thread.js  worker.js
Assets/qjs/Demos/NpmPack/: NpmConfigure.cs  NpmDemo.unity  npm_demo.js  npmpack.asar
Assets/qjs/Demos/Simple/: SimpleDemo.unity  simple.js
Assets/qjs/Editor/: AsarAssetEditor.cs  AsarImporter.cs  BehaviourEditor.cs  ConfigureEditor.cs  ContainerDrawer.cs  QJS_Temp.js
Assets/qjs/Editor/spacepuppy/: ArrayUtil.cs  ConvertUtil.cs  EditorHelper.cs  IDynamic.cs  StringUtil.cs
Assets/qjs/Plugins/qjs.bundle/Contents/: Info.plist
Assets/qjs/Plugins/qjs.bundle/Contents/MacOS/: qjs
Assets/qjs/Support/: AsarAsset.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
math_wrap/: pack.js  package.json
math_wrap/lib/: index.js
qjs_cmake/: CMakeLists.txt
qjs_cmake/quickjs/: quickjs.c  quickjs_ext.c  quickjs_ext.h  quickjs_in.cpp  quickjs_in.h
